# IRS-kube-multi-agent

./: README.md  main.py  pyproject.toml
agents/: __main__.py  config.py  mcp.py  models.py
agents/agents/: analyst_agent.py  base_agent.py  executor_agent.py  orchestrator_agent.py  planner_agent.py
agents/llms/: gemini.py
agents/mcps/: abstract_mcp.py  mcp_client.py
