[project]
name = "irs-kube-multi-agent"
version = "0.1.0"
description = "Multi-Agent for Kubernetes Incident Response System"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "ithaquakr", email = "ithadev.nguyen@gmail.com" }]
keywords = ["kubernetes", "agent"]
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
