[project]
name = "irs-kube-multi-agent"
version = "0.1.0"
description = "Multi-Agent for Kubernetes Incident Response System"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "ithaquakr", email = "ithadev.nguyen@gmail.com" }]
keywords = ["kubernetes", "agent"]
dependencies = [
    "google-genai>=1.21.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langgraph>=0.4.8",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
